# accache

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: accache.rs  account.rs  config.rs  error.rs  lib.rs  source.rs
src/format/: compression.rs  entry.rs  header.rs  mod.rs  reader.rs  writer.rs
src/nonblocking/: accache.rs  mod.rs
src/rpc/: blocking.rs  mod.rs  nonblocking.rs
tests/: cli.rs  file_source.rs  format_roundtrip.rs  hybrid_source.rs  nonblocking.rs  persistence.rs
