[package]
name = "accache"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fetch, cache, and persist Solana account data for in-process tests"

[lib]
path = "src/lib.rs"

[[bin]]
name = "accache"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = ["rpc", "cli"]
rpc = ["dep:solana-rpc-client", "dep:solana-rpc-client-api"]
nonblocking = ["rpc", "dep:tokio"]
cli = ["rpc", "dep:clap", "dep:env_logger", "dep:hex"]

[dependencies]
solana-account = { version = "3", features = ["serde"] }
solana-pubkey = { version = "4", features = ["serde"] }
solana-commitment-config = "3"
solana-rpc-client = { version = "=4.0.0-rc.0", optional = true, default-features = false }
solana-rpc-client-api = { version = "=4.0.0-rc.0", optional = true }
bincode = "1.3"
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
log = "0.4"
bs58 = "0.5"
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
hex = { version = "0.4", optional = true }
tempfile = "3"

[dev-dependencies]
mollusk-svm = "=0.12.1-agave-4.0"
hex = "0.4"
serde_json = "1"
assert_cmd = "2"
predicates = "3"
httpmock = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = "symbols"
